gitignore: mask .extension

--- a/.gitignore
+++ b/.gitignore
@@ -14,14 +14,13 @@ url/
 tramp
 diary
 *.dat
-.python-environments
-*.elc
+**/.python-environments/*
+**/*.elc
 .lsp-session*
-.cache
 projectile-bookmarks.eld
-**/.dap-breakpoints/*
+**/*dap-breakpoints
+**/.extension
 github
 places
-**/.extension/*
 projects
 **/*cache*/*
